library/pod-security-policy/capabilities/samples/psp-capabilities-restricted/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-allowed
  labels:
    owner: me.agilebank.demo
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      securityContext:
        capabilities:
          add: ["NET_BIND_SERVICE"]
          drop: ["ALL"]
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
