library/pod-security-policy/capabilities/samples/psp-capabilities-restricted/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: psp-capabilities-restricted
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedCapabilities: ["NET_BIND_SERVICE"]
    requiredDropCapabilities: ["ALL"]
